Add front - gateway - user service flow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=Gateway service
 spring.profiles.active=dev
 
 grpc.server.port=50051
+jwt.public-key-path: classpath:keys/local.public.key
+services.user-service.url=http://localhost:8500 
