--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.profiles.active=dev
 
 grpc.server.port=50051
 jwt.public-key-path: classpath:keys/local.public.key
-services.user-service.url=http://localhost:8500 
+services.user-service.url=http://localhost:8500
+services.order-service.url=http://localhost:8300
+server.port=8600
