--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,14 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<grpc.version>1.68.1</grpc.version>
+		<grpc-spring-boot-starter.version>3.1.0.RELEASE</grpc-spring-boot-starter.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>net.devh</groupId>
-			<artifactId>grpc-spring-boot-starter</artifactId>
-			<version>2.15.0.RELEASE</version>
+			<artifactId>grpc-client-spring-boot-starter</artifactId>
+			<version>${grpc-spring-boot-starter.version}</version>
 		</dependency>
 
 		<dependency>
