Adding user management endpoints and gRPC integration
- Added `/api/users` endpoints for CRUD operations.
- Integrated with `user-service` via gRPC.
- Updated JWT claims and authentication to handle user permissions.
- Modified `JwtConfig` to secure user endpoints.

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>com.ecmsp</groupId>
 			<artifactId>protos</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0-20251105.185705-41</version>
 		</dependency>
 
         <dependency>
