--- a/pom.xml
+++ b/pom.xml
@@ -69,11 +69,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.5.0</version>
 		</dependency>
-		<dependency>
-			<groupId>com.ecmsp</groupId>
-			<artifactId>protos</artifactId>
-			<version>1.0.0-20251105.185705-41</version>
-		</dependency>
+        <dependency>
+            <groupId>com.ecmsp</groupId>
+            <artifactId>protos</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
