--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,10 @@ grpc:
       address: static://localhost:7500
       # This means no TLS/SSL encryption (for local development)
       negotiationType: PLAINTEXT
+    product-service:
+      address: static://localhost:7400
+      # This means no TLS/SSL encryption (for local development)
+      negotiationType: PLAINTEXT
 
 
 jwt:
