--- a/pom.xml
+++ b/pom.xml
@@ -69,11 +69,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.8.4</version>
 		</dependency>
-        <dependency>
-            <groupId>com.ecmsp</groupId>
-            <artifactId>protos</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
+		<dependency>
+			<groupId>com.ecmsp</groupId>
+			<artifactId>protos</artifactId>
+			<version>1.0.0-20251205.092710-56</version>
+		</dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
